@@ -1,0 +1,8 @@
+package edu.mcw.rgd.pipelines.agr;
+
+public class DataProviderDTO {
+
+    public boolean internal = false;
+
+    public String source_organization_abbreviation = "RGD";
+}
